# WindowBC

./: CMakeLists.txt  module.cpp  module.h
libs/ClastBC/: converter.h  generic_lincage.h  module.h
libs/fcsparser-master/: 1.py
scripts/: fcs_loader.py  temp.csv
src/: AnalyseSystem.cpp  AnalyseSystem.h  MainWindow.cpp  MainWindow.h  PyExecutor.h  utils.h
src/calculation/: CalcBase.cpp  CalcBase.h  CalcClasterizationUPGMC.h
src/gui/: Constants.h  MainFrame.cpp  MainFrame.h
src/gui/panels/: MainPanel.h  mDrawingPanel.h  mLeftToolbarPanel.h  mRightToolbarPanel.h  mToolbarPanel.h
src/tests/: NowTesting.cpp
tests/py_executor_tests/: CMakeLists.txt  py_executor_test.cpp  py_executor_test.h
tests/tests_files/: Kusjmina.fcs  test_script.py
